第四次迭代

--- a/BaseFind/src/main/webapp/index.html
+++ b/BaseFind/src/main/webapp/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>娴嬭瘯鎻愪氦</title>
+    <meta charset="GBK">
+    <title>测试提交</title>
 </head>
 <body>
 
-<form action="http://www.coolbhu.cn:8080/addbaby" method="post">
+<form action="http://localhost:8080/q/addbaby" method="post">
 
-    瀹濊礉鍚嶇О<input name="babyname"><br/>
-    瀹濊礉绫诲埆<input name="babyclass"><br/>
-    绉樺瘑闂<input name="passsecret"><br/>
-    绉樺瘑绛旀<input name="secretkey"><br/>
-    鎵嬫満鍙风爜<input name="findphone"><br/>
-    缁忓害<input name="babylong"><br/>
-    缁村害<input name="babylat"><br/>
+    宝贝名称<input name="babyname"><br/>
+    宝贝类别<input name="babyclass"><br/>
+    秘密问题<input name="passsecret"><br/>
+    秘密答案<input name="secretkey"><br/>
+    手机号码<input name="findphone"><br/>
+    经度<input name="babylong"><br/>
+    维度<input name="babylat"><br/>
 
-    <input type="submit" value="鎻愪氦">
+    <input type="submit" value="提交">
 </form>
 
 </body>
